--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
   <title>myWEBSITE</title>
   <link rel="stylesheet" type="text/css" href="css/style.css">
   <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css">
-</head>
+<script data-ad-client="ca-pub-9805933761205976" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+  </head>
 <body>
 <!-- header -->
   <div class="medsos">
